@@ -11,6 +11,7 @@ NEWS
   * Add server.breakagelog, a "special" stderr (fixes #1863)
   * Fix config evaluation for debug.log-timeouts option (#1529)
   * Add "cgi.execute-x-only" to mod_cgi, requires +x for cgi scripts (fixes #2013)
+  * Fix FD_SETSIZE comparision warnings
 
 - 1.4.23 - 2009-06-19
   * Added some extra warning options in cmake and fix the resulting warnings (unused/static functions)
